--- a/frontend/src/app/pages/resources/resources.component.html
+++ b/frontend/src/app/pages/resources/resources.component.html
@@ -11,6 +11,8 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" [routerLink]="['/staff']" style="color:white">Staff</a>
+                <li class="nav-item">
+                  <a class="nav-link" [routerLink]="['/grades']" style="color:white">Grades</a>
               </ul>
             </div>
           </nav>
